Fix section about overlapping section contact

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -246,6 +246,8 @@ header span.red {
 
 .div.languages {
   width: 132px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 div.languages,
@@ -624,9 +626,26 @@ footer {
     overflow-x: hidden;
   }
 
+  .projects .github,
+  .projects .live {
+    font-size: 12px;
+    width: 100px;
+    left: 0;
+    padding: 0;
+  }
+
+  div.languages {
+    padding: 0;
+    font-size: 10px;
+  }
+
   .about-me,
   .grid-full {
     grid-template-rows: 100%;
+  }
+
+  .about-me {
+    margin-bottom: 800px;
   }
 
   .introduction {
